[gd_scene load_steps=7 format=3 uid="uid://c5tnguynvof04"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_36trq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p22vt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lc6rf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkut1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fckkt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ux0w5"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_36trq")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="mode" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 62
text = "Mode"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 38)
layout_mode = 2

[node name="NormalBtn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.894118, 0.290196, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_p22vt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lc6rf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qkut1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fckkt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux0w5")
text = "Normal
"

[node name="PassthroughBtn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.894118, 0.290196, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_p22vt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lc6rf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qkut1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fckkt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux0w5")
text = "PassThrough
"

[node name="Mode 3 Btn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.894118, 0.290196, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_p22vt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lc6rf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qkut1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fckkt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ux0w5")
text = "Mode 3
"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/NormalBtn" to="." method="_on_normal_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/PassthroughBtn" to="." method="_on_passthrough_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Mode 3 Btn" to="." method="_on_mode_3_btn_pressed"]
